--- a/AiAgentLab.SemanticKernel/AiAgentLab.SemanticKernel.csproj
+++ b/AiAgentLab.SemanticKernel/AiAgentLab.SemanticKernel.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.2" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.70.0" />
+  </ItemGroup>
+
 </Project>
